--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
 	h2 {
 		color: #0C3B5C;
 		text-align: center;
-		margin: 10px 0;
+		margin-top: 10px;
+		margin-bottom: 10px;
 		font-size: 40px;
-
 	}
 
 	h3 {
@@ -30,7 +30,6 @@
 		font-size: 30px;
 	}
 
-
 	h5 {
 		color: #F62E2E;
 		text-align: center;
@@ -48,10 +47,6 @@
 		font-size: 25px;
 		padding-left: 400px;
 		padding-right: 400px;
-	}
-
-	title {
-		text-align: center;
 	}
 
 	.container {
