--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 	body {
 		font-family: 'Arial';
-		background-color: #F9F2F1;
+		background-color: #E5E7E9;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
